--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 	<title>Denis Ahimbisibwe</title>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<img src="pic.jpg" alt="pic" width="250" height="250"/>
 	<style>
     
   </style>
