--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <head>
 
-	 <div>
+	<div id="top">
 	<title>Denis Ahimbisibwe</title>
 	<img src="Pic.jpg" alt="Denis"width="250" height="250"/>
 	<img src="Pic.jpg" alt="Denis" width="250" height="250"/>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
-	 </div><style>
+	 </div>
+	<style>
     
   </style>
   
