--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 	<div id="top">
 	<title>Denis Ahimbisibwe</title>
-	<img src="Pic.jpg" alt=""width="250" height="250"/>
-	<img src="Pic.jpg" alt="" width="250" height="250"/>
+	<img src="pic.jpg" alt=""width="250" height="250"/>
+	<img src="pic.jpg" alt="" width="250" height="250"/>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 	 </div>
 	<style>
