--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Denis Ahimbisibwe</title>
 	<img src="pic.jpeg" alt=""width="100" height="100"/>
 	<img src="pic.jpeg" alt="" width="100" height="100"/>
+	<img src="pic.jpeg" alt="" width="100" height="100"/>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 	
 	<style>
