--- a/Personal_info.html
+++ b/Personal_info.html
@@ -1,5 +1,3 @@
-Personal_info.html
-
 <html>
 <head>
 
@@ -13,5 +11,6 @@ Personal_info.html
       </br>Sex: Male 
       </br>Place of Birth: Kabale
       </p>
+<a href="Index.html/"><h4> HomePage</h4></a>
       </body>
       </html>
