--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 	<div id="main">
 		   <div id="nav"> 
-		   	<a href="Personal_info.html"/><h4>Projects</h4></a>
+		   	<a href="Personal_info.html"><h4>Projects</h4></a>
 		   		<h4>Contact info</h4>
 		         </br>Phone: +256772973578
 		     	</br> email :ahimbisibwedenis1982@gmail.com
