--- a/Personal_info.html
+++ b/Personal_info.html
@@ -11,6 +11,6 @@
       </br>Sex: Male 
       </br>Place of Birth: Kabale
       </p>
-<a href="Index.html/"><h4> HomePage</h4></a>
+<a href="Index.html"><h4> HomePage</h4></a>
       </body>
       </html>
