--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 		     	</br> Date of Birth: 15-08-1986
 		     	</br>Sex: Male 
 		     	</br>Place of Birth: Kabale
+<a href="https://github.com/Denis774/">GitHub</a> </br>
+ <a href="https://wwww.linkedin.com/in/ahimbisibwe-denis-18b10121/">linkedin</a></br>
+      <a href="https://www.facebook/Dellodenis/">Facebook</a></br>
+<a href="https://stackoverflow.com/users/11633401/denis774/">Stackoverflow</a>
 		     	</p>
 		    </div>
 	<div id="nav1">
