--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 		   		<h4>Contact info</h4>
 		         </br>Phone: +256772973578
 		     	</br> email :ahimbisibwedenis1982@gmail.com
-		     	</br> Address: Plot 45 Kampala Road
+	</br> Address: Plot 45 Kampala Road </br>
+<a href="https://github.com/Denis774/">GitHub</a> </br>
+ <a href="https://wwww.linkedin.com/in/ahimbisibwe-denis-18b10121/">linkedin</a></br>
+      <a href="https://www.facebook/Dellodenis/">Facebook</a></br>
+<a href="https://stackoverflow.com/users/11633401/denis774/">Stackoverflow</a>
 		     	<h2>Personal info</h2>
 		 
 		     	<p> Name: Denis Ahimbisibwe
 		     	</br> Date of Birth: 15-08-1986
 		     	</br>Sex: Male 
 		     	</br>Place of Birth: Kabale
-<a href="https://github.com/Denis774/">GitHub</a> </br>
- <a href="https://wwww.linkedin.com/in/ahimbisibwe-denis-18b10121/">linkedin</a></br>
-      <a href="https://www.facebook/Dellodenis/">Facebook</a></br>
-<a href="https://stackoverflow.com/users/11633401/denis774/">Stackoverflow</a>
 		     	</p>
 		    </div>
 	<div id="nav1">
