--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 		   <div id="nav"> 
 		   	<a href="Personal_info.html"><h4>Projects</h4></a>
 		   		<h4>Contact info</h4>
-		         </br>Phone: +256772973578
+		         Phone: +256772973578
 		     	</br> email :ahimbisibwedenis1982@gmail.com
 	</br> Address: Plot 45 Kampala Road </br>
 <a href="https://github.com/Denis774/">GitHub</a> </br>
  <a href="https://wwww.linkedin.com/in/ahimbisibwe-denis-18b10121/">linkedin</a></br>
-      <a href="https://www.facebook/Dellodenis/">Facebook</a></br>
+      <a href="https://www.facebook.com/Dellodenis/">Facebook</a></br>
 <a href="https://stackoverflow.com/users/11633401/denis774/">Stackoverflow</a>
 		     	<h2>Personal info</h2>
 		 
