--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
  <a href="https://wwww.linkedin.com/in/ahimbisibwe-denis-18b10121/">linkedin</a></br>
       <a href="https://www.facebook.com/Dellodenis/">Facebook</a></br>
 <a href="https://stackoverflow.com/users/11633401/denis774/">Stackoverflow</a>
-		     	<h2>Personal info</h2>
-		 
-		     	<p> Name: Denis Ahimbisibwe
-		     	</br> Date of Birth: 15-08-1986
-		     	</br>Sex: Male 
-		     	</br>Place of Birth: Kabale
-		     	</p>
+<a href="Personal_info.html"><h2>Personal info</h2></a>
 		    </div>
 	<div id="nav1">
 		      <h4>Education</h4>
