--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,6 @@
       	</br> Address: Plot 45 Kampala Road
       </p>
 
- <a href="index.html/">Home Page</a>
+ <a href="https://index.html/">Home Page</a>
       	</body>
       	</html>
