--- a/Personal_info.html
+++ b/Personal_info.html
@@ -11,10 +11,10 @@
       </br>Sex: Male 
       </br>Place of Birth: Kabale
       </p>
-      <a href="https://github.com/Denis774/">GitHub</a>
- <a href="https://wwww.linkedin.com/in/ahimbisibwe-denis-18b10121/">linkedin</a>
-      <a href="https://www.facebook/Dellodenis/">Facebook</a>
-<a href="https://stackoverflow.com/users/11633401/denis774/">Stackoverflow</a>
+<a href="https://github.com/Denis774/">GitHub</a></br>
+ <a href="https://wwww.linkedin.com/in/ahimbisibwe-denis-18b10121/">linkedin</a></br>
+      <a href="https://www.facebook/Dellodenis/">Facebook</a></br>
+<a href="https://stackoverflow.com/users/11633401/denis774/">Stackoverflow</a></br>
 <a href="https://Index.html"> HomePage </a>
       </body>
       </html>
