--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		</div>
 	<div id="main">
 		   <div id="nav"> 
-			   <a href="Personal_info.html"><h4>Projects</h4></a></br>
-			   <a href="Personal_info.html"><h4>Personal info</h4></a></br>
-			   <a href="Contact_info.html"><h4>Contact info</h4></a></br>
+			   <a href="Personal_info.html"><h4>Projects</h4></a>
+			   <a href="Personal_info.html"><h4>Personal info</h4></a>
+			   <a href="Contact_info.html"><h4>Contact info</h4></a>
 <a href="https://github.com/Denis774/">GitHub</a> </br>
  <a href="https://wwww.linkedin.com/in/ahimbisibwe-denis-18b10121/">linkedin</a></br>
       <a href="https://www.facebook.com/Dellodenis/">Facebook</a></br>
